--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "backend-escola",
   "module": "index.ts",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "lint:fix": "eslint . --fix; prettier --write ."
   },
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "eslint": "^8.56.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   },
   "peerDependencies": {
@@ -15,11 +23,16 @@
   "dependencies": {
     "@fastify/cors": "^8.5.0",
     "@prisma/client": "^5.7.1",
+    "@typescript-eslint/parser": "^6.16.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
     "fastify": "^4.25.2",
     "jsonwebtoken": "^9.0.2",
+    "prettier": "^3.1.1",
     "prisma": "^5.7.1",
+    "tslint": "^6.1.3",
     "tsx": "^4.7.0"
   }
 }
