--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "module": "index.ts",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "lint:fix": "eslint . --fix; prettier --write ."
+    "lint:fix": "eslint . --fix"
   },
   "type": "module",
   "devDependencies": {
